# aero2tools

./: .gitignore  README.md  makefile  pyproject.toml  setup.py
aero2tools/: __init__.py  coefficients.py  core.py  isentropic.py  optimize.py  shock.py  state.py  tracker.py
aero2tools/Geometries/: nozzle.py
aero2tools/Relations/: interIsen.py  normal.py  oblique.py  rayleigh.py  relation.py
core/bindings/: pybind11_interface.cpp
core/flow/: Flow.hpp  State.hpp
core/mdo/: SystemVariables.hpp  Variable.hpp
core/physics/: Config.hpp  IdealGas.cpp  IdealGas.hpp  Isentropic.cpp
docs/: file-structure plan.md
include/: add.hpp
src/: add.cpp  binding.cpp
tests/: conftest.py  test_basic.py  test_hw1.py  test_hw2.py  test_hw3.py  util.py
tests/features/: test_expansion.py  test_shock.py
tests/homework/: test_hw1.py  test_hw2.py  test_hw3.py  test_hw4.py  test_hw5.py  test_hw6.py  test_hw7.py
