[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aero2tools"
version = "0.0.2"
authors = [
  { name="Logan" }
]
description = "Aerodynamics tools for isentropic and shock calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pint"
]
[tool.setuptools.packages.find]
where = ["."]