[build-system]
requires = ["setuptools>=61.0", "pybind11>=2.13", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aero2tools"
version = "4.0.1b"
authors = [
  { name="Logan" }
]
description = "Aerodynamics tools for isentropic and shock calculations"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pint"
]